Banner style adjusted in an attempt to fix missing scrollbar on iPhone 5 display

--- a/assets/css/banner.css
+++ b/assets/css/banner.css
@@ -7,7 +7,7 @@
 .banner { 
 	/*display: flex; flex-direction: column; justify-content: center; */ 
 	/*height: 100%; */ 
-	overflow-y: auto; overflow-x: hidden; 
+	overflow: auto; 
 
 } 
 
